Include graphs on list pages

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -19,4 +19,9 @@
 	{{end}}
 </footer>
 
+{{ partial "chart.html" . }}
+{{ partial "msc.html" . }}
+{{ partial "flowchart.html" . }}
+{{ partial "graphviz.html" . }}
+
 {{ partial "footer.html" . }}
